# BitstreamEvolutionPico2ice

./: .dockerignore  .gitignore  CONFIG.md  Dockerfile  Makefile  README.md  best copy 2.asc  config.py  conftest.py  farmconfig.ini  ice27_only.asc  icefarm_hang_bug_report.md  pyproject.toml  repr.py  repr_seedgen.py  test_seed.asc
.github/workflows/: read-toml.yml
code/: CircuitPopulation.html  Config.html  Microcontroller.html  multi_evolve.html
data/: default_config.ini  farmconfig.ini  ice27_only.asc  ice27_only_no_logic.asc  ice27_only_no_logic_neigh.asc
dev/: .buildinfo  404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/.doctrees/: 404.doctree  environment.pickle  index.doctree
dev/.doctrees/architecture/: index.doctree
dev/.doctrees/code/: BitstreamEvolutionProtocols.doctree  Directories.doctree  Evolution.doctree  Logger.doctree  PlotConfig.doctree  PlotDataRecorder.doctree  PlotEvolutionLive.doctree  TrivialImplementation.doctree  index.doctree  utilities.doctree
dev/.doctrees/code/Circuit/: Circuit.doctree  FileBasedCircuit.doctree  FullySimCircuit.doctree  index.doctree
dev/.doctrees/code/EvaluateFitness/: EvalPulseCountFitness.doctree  EvalVarMaxFitness.doctree  EvaluateFitness.doctree  index.doctree
dev/.doctrees/code/GenerateMeasurements/: GenerateMeasurements.doctree  index.doctree
dev/.doctrees/code/Hardware/: Microcontroller.doctree  index.doctree
dev/.doctrees/code/Individual/: BitstreamIndividual.doctree  index.doctree
dev/.doctrees/code/Population/: PopulationInitialization.doctree  index.doctree
dev/.doctrees/code/tools/: pulse_histogram.doctree  reconstruct.doctree
dev/.doctrees/dev/: index.doctree
dev/_modules/: BitstreamEvolutionProtocols.html  Evolution.html  Logger.html  PlotEvolutionLive.html  TrivialImplementation.html  index.html
dev/_modules/Circuit/: Circuit.html  FileBasedCircuit.html  FullySimCircuit.html
dev/_modules/EvaluateFitness/: EvaluateFitness.html
dev/_modules/GenerateMeasurements/: GenerateMeasurements.html
dev/_modules/Hardware/: Microcontroller.html
dev/_modules/Population/: PopulationInitialization.html
dev/_sources/: 404.rst
dev/_sources/code/: PlotConfig.rst  PlotDataRecorder.rst  index.rst
dev/_sources/code/Circuit/: FullySimCircuit.rst
dev/_sources/code/EvaluateFitness/: EvalVarMaxFitness.rst  EvaluateFitness.rst
dev/_sources/code/Hardware/: Microcontroller.rst
dev/_sources/code/Individual/: BitstreamIndividual.rst  index.rst
dev/_sources/code/Population/: PopulationInitialization.rst  index.rst
dev/architecture/: index.html
dev/code/: BitstreamEvolutionProtocols.html  Directories.html  Evolution.html  Logger.html  PlotConfig.html  PlotDataRecorder.html  PlotEvolutionLive.html  TrivialImplementation.html  index.html  utilities.html
dev/code/Circuit/: Circuit.html  FileBasedCircuit.html  FullySimCircuit.html  index.html
dev/code/EvaluateFitness/: EvalPulseCountFitness.html  EvalVarMaxFitness.html  EvaluateFitness.html  index.html
dev/code/GenerateMeasurements/: GenerateMeasurements.html  index.html
dev/code/Hardware/: Microcontroller.html  index.html
dev/code/Individual/: BitstreamIndividual.html  index.html
dev/code/Population/: PopulationInitialization.html  index.html
dev/code/tools/: pulse_histogram.html  reconstruct.html
dev/dev/: index.html
docker/: bitstream.yml  bitstream_local.yml  local_icefarm.Dockerfile  pip_icefarm.Dockerfile
docs/sphinx/source/: conf.py  index.rst
docs/sphinx/source/architecture/: index.rst
docs/sphinx/source/code/: Directories.rst  TrivialImplementation.rst  index.rst
docs/sphinx/source/code/Circuit/: Circuit.rst  FileBasedCircuit.rst  index.rst
docs/sphinx/source/code/EvaluateFitness/: EvalPulseCountFitness.rst  index.rst
docs/sphinx/source/code/GenerateMeasurements/: GenerateMeasurements.rst  index.rst
docs/sphinx/source/code/Hardware/: index.rst
docs/sphinx/source/dev/: index.rst
src/: BitstreamEvolutionProtocols.py  CircuitPopulation.py  Config.py  Evolution.py  Logger.py  Microcontroller.py  PlotEvolutionLive.py  TrivialImplementation.py  ascTemplateBuilder.py  evolve.py  init.py  repr.py  spanmap.py
src/Circuit/: Circuit.py  CircuitLegacy.py  FileBasedCircuit.py  IntrinsicCircuit.py  PulseCountFitnessFunction.py  RemoteCircuit.py  SimHardwareCircuit.py  ToneDiscriminatorFitnessFunction.py  VarMaxFitnessFunction.py
src/Selection/: ClassicTournamentSelection.py  FitnessProportionalSelection.py  FractionalEliteTournament.py  MapElitesSelection.py  RankProportionalSelection.py  SingleEliteTournamentSelection.py  utils.py
src/ga/: crossover.py  diversity.py  mixins.py  mutation.py
src/ga/selection/: ClassicTournamentSelection.py  FitnessProportionalSelection.py  FractionalEliteTournament.py  MapElitesSelection.py  RankProportionalSelection.py  SelectionMethod.py  SingleEliteTournamentSelection.py  utils.py
src/tools/: reconstruct.py
test/: test_TrivialImplementation.py  test_config_icefarm_params.py  test_e2e_helpers.py
test_e2e/: README.md  conftest.py  helpers.py  test_remote_smoke.py
