[config.sphinx] # Metadata displayed on Sphinx page (custom)
name = "Bitstream Evolution"
#version = uses version in tool.poetry
copyright_message = '2024-2026, Evolvable Hardware'
author = 'Evolvable Hardware'

theme = "sphinx_nefertiti"
dev_theme = "sphinx_book_theme"
#OPTIONS:   'sphinx_book_theme'
#           'sphinx_wagtail_theme'
#           'sphinx_nefertiti'      <== Default/Suggested
#           'pydata_sphinx_theme'

logo = "https://evolvablehardware.org/images/EHWsetup.jpg"
dev_logo = "https://evolvablehardware.org/images/setup_tutorial_2.jpg"
test_fail_logo = "https://evolvablehardware.org/images/EHWsetup.jpg"

# Config For testing in github workflows
[tests]
# all values used when testing

[tests.workflows]
# these are values that need verification in testing
python-versions = ["3.11","3.12","3.13", "3.14"]
# These are the marker groups we are testing together, separate more for greater concurrency
pytest-testing-groups = ["immediate or short", "long"]
# Test Results to Display:
#     f - failed        X - xpassed
#     E - error         p - passed
#     s - skipped       P - passed with output
#     x - xfailed
test-results-display-selector = "fEXxs"
# Whether or not you see summary table in test results
test-results-display-summary = true


[tool.pytest.ini_options]

pythonpath = ["src"]
# This line is automatically appended on any "pytest" command run
addopts = "--strict-markers"
# The markers are specified to the left of the colons, and descriptions to the right.
# These descriptions can be viewed by typing "pytest --markers"
markers = [
    "immediate: For tests that are almost immediate, i.e. run < 10 sec        Group: test_length (default)",
    "short:     For tests that are relatively short, i.e. run < 60 sec        Group: test_length",
    "long:      For tests that run over a long time, i.e. run > 1 min         Group: test_length",
    "all:       Automatically applied to all tests                            Group: all_tests (default)",
]

[tool.pytest.marker_groups]
# These are the test groups that all tests must be a part of, so if one test is not marked, the default mark will be applied.
# Here the name of the marker group is the variable assigned, and the markers in it are the members of the group
# The marker at index 0 is the default
# the logic for this is in conftest.py
test_length = ["immediate", "short","long"]
all_tests = ["all"]


# Config File for Poetry:
# More Info: https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "bitstreamevolution"
version = "0.1.0"
description = "Open Source Evolution Toolkit"

authors = [
    "Isaac Mierow <mierowir@rose-hulman.edu>"
    ]

#maintainers = [ # Should be distinct from list of authors Optional
#  "Isaac Mierow <mierowir@rose-hulman.edu>"
#  ]

#What we want to include or exclude in the package
#exclude = ["requirements.txt"]

#Package information & websites
package-mode = false
# Change to true when we want to publish
readme = "README.md"
license = "GPL-3.0" # more licenses at https://spdx.org/licenses/
homepage = "https://evolvablehardware.org/"
repository = "https://github.com/evolvablehardware/BitstreamEvolution"
documentation = "https://evolvablehardware.org/setup.html"

#This is where we can put other URLs we want to link to
[tool.poetry.urls]
#"Bug Tracker" = "https://github.com/python-poetry/poetry/issues"



## Dependancy groups, and when to install them:
#   How to install default dependancies:
#       poetry install
#   How to install the dependancies included in all groups:
#       poetry install --all-groups
#   How to install default dependancies with another group:
#       poetry install --with dev
#       poetry install --with test,docs
#   How to add dependancies to groups: (only add dependancies to `Base Broups`)
#       poetry add numpy --with test
#   How to install only the dependancies in a group and none of the default ones:
#       poetry install --only read_pyproject
#
## Default Group:
#   tool.poetry.dependencies:    The dependancies required to run the code, always included
#
## Base Groups: -- Groups dependancies are added to and specified. Each dependancy should only be specified once.
#   docs:           (optional) Dependancies required to compile the documentation
#   test:           (optional) Dependancies required to run the tests
#   lint:           (optional) Dependancies required to perform linting on the codebase
#   read_pyproject: (optional) Mimimum dependancies needed to interpret the pyprojct.toml file by using `interpret_pyptoject.py`.
#
## Composite Groups:  -- Groups assembled entirely from the base groups for a specific higher-level purpose
#   dev:                (optional) Additional dependancies required to do all development activities, including documentation & testing.
#   gh_read_pyproject:  (optional) The group used by github actions to read the pyproject.toml file with `interpret_pyproject.py` (uses --only)
#   gh_tests:           (optional) Group used by Github Actions to evaluate the tests in the deployment pipeline
#   gh_docs:            (optional) Group used by Github Actions to generate the Documentation

###################
## Default Group ##
###################

[tool.poetry.dependencies] #dependancies needed to run the app under normal conditions
python = "^3.11"
toml = "^0.10"
pyserial = "^3.5"
numpy = "^2"
matplotlib = "^3"
sortedcontainers = "^2.4"
result = "0.17.0"
returns = "^0.26"

#################
## Base Groups ##
#################

[tool.poetry.group.read_pyproject]
optional = true
[tool.poetry.group.read_pyproject.dependencies]
python = "^3.11"
toml = "^0.10"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = ">=8.0.0"
sphinx-nefertiti = ">=0.3.2, <1.0.0"
sphinx-book-theme = ">=1.1.2, <2.0.0"
sphinx-wagtail-theme = ">=6.3.0, <7.0.0"
pydata-sphinx-theme = ">=0.15.2, <1.0.0"
sphinx-design = ">=0.6.1, <1.0.0"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies] #tests group is group for testing in local contexts
toml = "^0.10.2"
pytest = ">=8.0.0, <=10.0.0"
pytest-mock = "^3"

[tool.poetry.group.lint]
optional = true
[tool.poetry.group.lint.dependencies] #tests group is group for testing in local contexts
mypy = "^1"

######################
## Composite Groups ##
######################

[tool.poetry.group.dev]
#dev group for developers updating the code
optional = true
include-groups = [
    "docs",
    "test",
    "lint"
]

[tool.poetry.group.gh_read_pyproject] #This is used when we want to read pyproject.toml while evaluating workflows.
optional = true
include-groups = [
    "read_pyproject",
]

[tool.poetry.group.gh_tests]
#gh_tests group for all testing on github.
optional = true
include-groups = [
    "test",
]

[tool.poetry.group.gh_docs]
#gh_tests group for building documentation on github.
optional = true
include-groups = [
    "docs",
    "test"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"